add autogenerate id and UT adjusts