@@ -1,6 +1,7 @@
 package com.currencyexchange.controller;
 
-import com.currencyexchange.dto.AccountDTO;
+import com.currencyexchange.dto.AccountDTORequest;
+import com.currencyexchange.dto.AccountDTOResponse;
 import com.currencyexchange.exceptions.NotFoundException;
 import com.currencyexchange.service.account.impl.AccountServiceImpl;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -13,10 +14,9 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
+import java.util.List;
 
-import static buider.AccountDTOBuilder.accountWithError;
-import static buider.AccountDTOBuilder.createAccount;
+import static buider.AccountDTOBuilder.*;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
@@ -36,14 +36,15 @@ class AccountControllerImplTest {
 
     @Test
     @DisplayName("POST -> 200 OK")
-    void create_sucesso() throws Exception {
-        AccountDTO accountDTO = createAccount();
+    void create_success() throws Exception {
+        AccountDTORequest accountDTORequest = createAccountRequest();
+        AccountDTOResponse accountDTOResponse = createAccountResponse();
 
-        when(accountServiceImpl.createAccount(accountDTO)).thenReturn(accountDTO);
+        when(accountServiceImpl.createAccount(accountDTORequest)).thenReturn(accountDTOResponse);
 
         mockMvc.perform(post(URI)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(new ObjectMapper().writeValueAsString(accountDTO)))
+                        .content(new ObjectMapper().writeValueAsString(accountDTORequest)))
                 .andDo(print())
                 .andExpect(status().isCreated())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
@@ -55,36 +56,36 @@ class AccountControllerImplTest {
 
     @Test
     @DisplayName("POST -> 400 BadRequest")
-    void create_error() throws Exception {
-        AccountDTO accountDTO = accountWithError();
+    void create_error_invalidParameters() throws Exception {
+        AccountDTORequest accountDTORequest = accountWithError();
 
         mockMvc.perform(post(URI)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(new ObjectMapper().writeValueAsString(accountDTO)))
+                        .content(new ObjectMapper().writeValueAsString(accountDTORequest)))
                 .andDo(print())
                 .andExpect(status().isBadRequest());
     }
 
     @Test
     @DisplayName("POST -> 500 Internal Server Error")
-    void create_error2() throws Exception {
-        AccountDTO accountDTO = createAccount();
+    void create_error_internalServerError() throws Exception {
+        AccountDTORequest accountDTORequest = createAccountRequest();
 
-        when(accountServiceImpl.createAccount(accountDTO)).thenThrow(new RuntimeException("Erro inesperado"));
+        when(accountServiceImpl.createAccount(accountDTORequest)).thenThrow(new RuntimeException(""));
         mockMvc.perform(post(URI)
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(new ObjectMapper().writeValueAsString(accountDTO)))
+                        .content(new ObjectMapper().writeValueAsString(accountDTORequest)))
                 .andDo(print())
                 .andExpect(status().isInternalServerError());
     }
 
     @Test
     @DisplayName("GET -> 200 OK")
-    void get_sucesso() throws Exception {
-        String accountId = "1";
-        AccountDTO accountDTO = createAccount();
+    void get_success() throws Exception {
+        AccountDTOResponse accountDTOResponse = createAccountResponse();
+        String accountId = accountDTOResponse.getAccountId();
 
-        when(accountServiceImpl.getAccountByAccountId(accountId)).thenReturn(accountDTO);
+        when(accountServiceImpl.getAccountByAccountId(accountId)).thenReturn(accountDTOResponse);
 
         mockMvc.perform(get(URI + "/{accountId}", accountId))
                 .andDo(print())
@@ -98,7 +99,7 @@ class AccountControllerImplTest {
 
     @Test
     @DisplayName("GET -> 404 NotFound")
-    void get_error() throws Exception {
+    void get_error_accountNotFound() throws Exception {
         String accountId = "1";
 
         when(accountServiceImpl.getAccountByAccountId(accountId)).thenThrow(new NotFoundException(""));
@@ -110,10 +111,10 @@ class AccountControllerImplTest {
 
     @Test
     @DisplayName("GET -> 500 Internal Server Error")
-    void get_error2() throws Exception {
+    void get_error_internalServerError() throws Exception {
         String accountId = "1";
 
-        when(accountServiceImpl.getAccountByAccountId(accountId)).thenThrow(new RuntimeException("Erro inesperado"));
+        when(accountServiceImpl.getAccountByAccountId(accountId)).thenThrow(new RuntimeException(""));
 
         mockMvc.perform(get(URI + "/{accountId}", accountId))
                 .andDo(print())
@@ -122,10 +123,10 @@ class AccountControllerImplTest {
 
     @Test
     @DisplayName("GET All -> 200 OK")
-    void getAll_sucesso() throws Exception {
-        AccountDTO accountDTO = createAccount();
+    void getAll_success() throws Exception {
+        AccountDTOResponse accountDTOResponse = createAccountResponse();
 
-        when(accountServiceImpl.getAllAccounts()).thenReturn(Arrays.asList(accountDTO));
+        when(accountServiceImpl.getAllAccounts()).thenReturn(List.of(accountDTOResponse));
 
         mockMvc.perform(get(URI))
                 .andDo(print())
@@ -135,7 +136,7 @@ class AccountControllerImplTest {
 
     @Test
     @DisplayName("GET ALL -> 404 NotFound")
-    void getAll_error() throws Exception {
+    void getAll_error_accountNotFound() throws Exception {
         when(accountServiceImpl.getAllAccounts()).thenThrow(new NotFoundException(""));
 
         mockMvc.perform(get(URI))
@@ -145,8 +146,8 @@ class AccountControllerImplTest {
 
     @Test
     @DisplayName("GET ALL -> 500 Internal Server Error")
-    void getAll_error2() throws Exception {
-        when(accountServiceImpl.getAllAccounts()).thenThrow(new RuntimeException("Erro inesperado"));
+    void getAll_error_internalServerError() throws Exception {
+        when(accountServiceImpl.getAllAccounts()).thenThrow(new RuntimeException(""));
 
         mockMvc.perform(get(URI))
                 .andDo(print())
@@ -155,7 +156,7 @@ class AccountControllerImplTest {
 
     @Test
     @DisplayName("DELETE -> 200 OK")
-    void delete_sucesso() throws Exception {
+    void delete_success() throws Exception {
         String accountId = "1";
 
         doNothing().when(accountServiceImpl).deleteAccountByAccountId(accountId);
@@ -167,7 +168,7 @@ class AccountControllerImplTest {
 
     @Test
     @DisplayName("DELETE -> 404 NotFound")
-    void delete_error() throws Exception {
+    void delete_error_accountNotFound() throws Exception {
         String accountId = "1";
 
         doThrow(new NotFoundException("")).when(accountServiceImpl).deleteAccountByAccountId(accountId);
@@ -179,10 +180,10 @@ class AccountControllerImplTest {
 
     @Test
     @DisplayName("GET -> 500 Internal Server Error")
-    void delete_error2() throws Exception {
+    void delete_error_internalServerError() throws Exception {
         String accountId = "1";
 
-        doThrow(new RuntimeException("Erro inesperado")).when(accountServiceImpl).deleteAccountByAccountId(accountId);
+        doThrow(new RuntimeException("")).when(accountServiceImpl).deleteAccountByAccountId(accountId);
 
         mockMvc.perform(delete(URI + "/{accountId}", accountId))
                 .andDo(print())
